# vancouver-metro-libraray-search

./: .gitignore  GEMINI.md  Justfile  README.md  pyproject.toml
src/app/: config.py  main.py  scraper.py
src/templates/: index.html  results.html
src/tests/: test_scraper.py
